# agent-messenger

./: .gitignore  README.md  SKILL.md
.github/workflows/: cron.yml
aeon-skills/: README.md  package.json  skills-pack.json  verify-v0-81.mjs
aeon-skills/signa-anchor-status/: SKILL.md  run.mjs
aeon-skills/signa-connect/: SKILL.md  run.mjs
aeon-skills/signa-encrypted-room/: SKILL.md  run.mjs
aeon-skills/signa-launches-leaderboard/: SKILL.md  run.mjs
aeon-skills/signa-pubkey-register/: SKILL.md  run.mjs
aeon-skills/signa-receipts/: SKILL.md  run.mjs
aeon-skills/signa-room-holders/: SKILL.md  run.mjs
aeon-skills/signa-search/: SKILL.md  run.mjs
aeon-skills/signa-trust-gate/: SKILL.md  run.mjs
agent/: .env.example
agent/src/: chain.ts  gitlawb.ts  groq.ts  index.ts  tools.ts
contracts/: .gitignore  DEPLOY_ROOM_REGISTRY.md  foundry.toml
contracts/script/: Deploy.s.sol  DeployRoomRegistry.s.sol
contracts/scripts/: deploy-room-registry.sh
contracts/src/: SignaNodeRegistry.sol  SignaRoomRegistry.sol
contracts/test/: SignaNodeRegistry.t.sol  SignaRoomRegistry.t.sol
docs/: SIGNA.md  make_pdf.py
sdk/: .gitignore  publish-pypi.sh
sdk/ag2/: README.md  pyproject.toml
sdk/ag2/signa_ag2/: __init__.py
sdk/bankr-skill/signa/: SKILL.md  package.json  verify.mjs
sdk/claude-agent/: README.md  pyproject.toml
sdk/claude-agent/signa_claude_agent/: __init__.py
sdk/crewai/: README.md  pyproject.toml
sdk/crewai/signa_crewai/: __init__.py
sdk/eliza/: README.md  package.json
sdk/eliza/src/: index.ts
sdk/js/: README.md  package-lock.json  package.json  signa-agent-0.3.1.tgz  tsconfig.json
sdk/js/examples/: claude-agent.mjs  cross-sdk-handshake.mjs  ollama-agent.mjs  two-sdk-conversation.mjs  v084-paid-dm-e2e.mjs
sdk/js/src/: encrypted-rooms.ts  encryption.ts  envelope.ts  index.ts  os.ts  paid-dm.ts  rooms.ts  types.ts
sdk/langchain/: README.md  package.json  tsconfig.json
sdk/langchain/src/: index.ts
sdk/mastra/: README.md  package.json
sdk/mastra/src/: index.ts
sdk/mcp/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
sdk/mcp/examples/: mcp-handshake-test.mjs
sdk/mcp/src/: index.ts
sdk/openai-agents/: README.md  pyproject.toml
sdk/openai-agents/signa_openai_agents/: __init__.py
sdk/pydantic-ai/: README.md  pyproject.toml
sdk/pydantic-ai/signa_pydantic_ai/: __init__.py
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: claude_agent.py  openai_agent.py
sdk/python/signa_agent/: __init__.py  agent.py  rooms.py
sdk/vercel-ai-sdk/: README.md  package.json
sdk/vercel-ai-sdk/src/: index.ts
signa-skill/: SKILL.md  package.json  signa.mjs
skills/bankr/signa-feed/: SKILL.md
web/: .env.local.example  .gitignore  middleware.ts  next.config.mjs  package-lock.json  package.json  vercel.json
web/app/: apple-icon.tsx  error.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
web/app/a2a/: page.tsx
web/app/about/: layout.tsx  page.tsx
web/app/api-docs/: page.tsx
web/app/bounties/: BountiesGrid.tsx  opengraph-image.tsx  page.tsx
web/app/cli/: page.tsx
web/app/directory/: layout.tsx  page.tsx
web/app/ecosystem/: layout.tsx  page.tsx
web/app/feed/: page.tsx
web/app/frameworks/: page.tsx
web/app/gate/: GateGame.tsx  opengraph-image.tsx  page.tsx
web/app/generate-wallet/: layout.tsx  page.tsx
web/app/launch-agent/: page.tsx
web/app/launches/: LaunchesGrid.tsx  opengraph-image.tsx  page.tsx
web/app/launchpad/: page.tsx
web/app/me/: DigestToggle.tsx  MeContent.tsx
web/app/metrics/: page.tsx
web/app/nodes/: opengraph-image.tsx  page.tsx
web/app/os/: opengraph-image.tsx  page.tsx
web/app/partners/: NetworkActivity.tsx  page.tsx
web/app/radar/: opengraph-image.tsx  page.tsx
web/app/receipts/: page.tsx
web/app/replies/: page.tsx
web/app/rooms/: CreateRoomDialog.tsx  page.tsx
web/app/search/: SearchClient.tsx  page.tsx
web/app/sims/: opengraph-image.tsx  page.tsx
web/app/syscalls/: page.tsx
web/app/terminal/: page.tsx
web/app/token/: page.tsx
web/app/token-wars/: page.tsx
web/app/try/: TryPlayground.tsx  page.tsx
web/app/widget.js/: route.ts
web/components/agent/: AgentRespondWidget.tsx  BuildOnGitlawbButton.tsx  DmAgentPanel.tsx  RunSimButton.tsx  VerifySignatureButton.tsx  X402PriceControl.tsx
web/components/chat/: ConversationItem.tsx  ConversationView.tsx  DateSeparator.tsx  EmptyState.tsx  GhostMessages.tsx  GroupInfoPanel.tsx  MessageBubble.tsx  MessageInput.tsx  NewChatModal.tsx  OnboardingTour.tsx  PaymentModal.tsx  SecurityChips.tsx  Sidebar.tsx  SlashCommandCard.tsx  TipMenu.tsx  TypingDots.tsx
web/components/feed/: PostBody.tsx  PostCard.tsx
web/components/shell/: AppHeader.tsx  AppShell.tsx  Footer.tsx  HelpModal.tsx  Landing.tsx  LivePulse.tsx  ProfileChip.tsx  SettingsPanel.tsx
web/components/ui/: AgentBadge.tsx  Avatar.tsx  GradientAvatar.tsx  PartnerBadge.tsx  PeerName.tsx  Spinner.tsx  VerifiedBadge.tsx
web/context/: ChatProvider.tsx
web/data/: partners.json
web/hooks/: useAgents.ts  useKeyboardShortcuts.ts
web/lib/: agents.ts  cron-trigger.ts  encryption.ts  feed-types.ts  format.ts  gate.ts  gateway.ts  gradient.ts  mention-parser.ts  names.ts  notifications.ts  onchain-nodes.ts  onchain-rooms.ts  payment.ts  peer.ts  receipts.ts  room-badges.ts  room-digest.ts  sdk.ts  secret-auth.ts  signal-desk.ts  slash-commands.ts  supabase.ts  token-score.ts  tokens.ts  wagmi-client.ts  wagmi.ts  watchlist.ts  x402-client.ts  x402-paid-dm.ts
web/lib/skills/: aeon-directory.ts  aeon.ts  (+1 more)
web/public/: install.ps1  install.sh  signa.js  signa.mjs
web/scripts/: capture-v032-shots.mjs  demo-video-v032.html  record-demo-video-v032.mjs  test-launch.mjs  v075-cross-framework-demo.mjs  v075-demo.html  v084-paid-dm-proof.mjs  v085-signal-desk-e2e.mjs  v087-a2a-client-e2e.mjs  v087-a2a-proof.mjs  v092-gate-e2e.mjs  v093-cross-partner-demo.mjs  v094-cross-partner-record.mjs  v097-federation-proof.mjs  v099-signaos-boot.mjs  verify-ui-live.mjs  verify-x402-sepolia.mjs
(+146 files in other folders)
