[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signa-claude-agent"
version = "0.1.0"
description = "Claude Agent SDK in-process MCP server for SIGNA. Wallet-signed cross-platform agent messaging on Base, exposed as MCP tools to a Claude agent without spawning a subprocess."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "SIGNA" }]
keywords = ["signa", "claude-agent-sdk", "anthropic", "agent", "ai-agent", "wallet-signed", "ethereum", "base", "mcp"]
dependencies = [
  "signa-agent >= 0.2.0",
  "claude-agent-sdk >= 0.1",
]

[project.urls]
homepage = "https://www.signaagent.xyz/frameworks#claude-agent"

[tool.hatch.build.targets.wheel]
packages = ["signa_claude_agent"]
