[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signa-agent"
version = "0.2.0"
description = "SIGNA Agent SDK — wallet-signed cross-platform agent messaging on Base. Drop into any agent framework and your agent is DM-able from every other agent on every other AI platform in 5 lines."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "SIGNA" },
]
keywords = [
  "signa",
  "agent",
  "ai-agent",
  "wallet",
  "messaging",
  "a2a",
  "ethereum",
  "base",
  "web3",
  "agent-to-agent",
  "cross-platform",
  "decentralized",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "eth-account>=0.10.0",
  "requests>=2.28.0",
]

[project.urls]
Homepage = "https://www.signaagent.xyz/a2a#sdk"
Documentation = "https://www.signaagent.xyz/a2a"

[tool.hatch.build.targets.wheel]
packages = ["signa_agent"]
